# P1_Modbus

./: .gitignore  README.md  pyproject.toml  ultraArm P1协议文档.xlsx
examples/: basic_usage.py
p1_modbus/: __init__.py  client.py  command_address.py  commands.py  crc.py  errors.py  events.py  framing.py  models.py  ultra_api.py  ultra_api_limits.py
p1_modbus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: probe_missing_modbus.py
test_report/: 2026-06-13-16-28-44_P1_aging_movement.xlsx  2026-06-13-16-30-06_P1_aging_movement.xlsx  2026-06-15-19-29-45_P1_aging_movement.xlsx  2026-06-15-19-30-29_P1_aging_movement.xlsx  2026-06-15-19-31-04_P1_aging_movement.xlsx  2026-06-17-19-17-04_P1_aging_movement.xlsx
tests/: test_command_address.py  test_commands_parse.py  test_crc.py  test_events.py  test_framing.py  test_modbus_rtu.py  test_ultra_api.py  test_ultra_api_limits.py
