[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "p1-modbus"
version = "0.1.0"
description = "P1 robot Modbus RTU (serial) client — P1_Modbus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["p1_modbus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
